Simplify mixin map construction